fix item alignment

--- a/src/App.css
+++ b/src/App.css
@@ -106,6 +106,9 @@ html {
   background-color: transparent;
   transition: all 0.2s ease-out;
   outline: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 .item.selected {
   background-color: aquamarine;
